2.4.104 -> 2.4.105:
	- added langpath: to rpmrc, and mark files with matches
	- added some C++ cruft to rpmlib header files
	- added trigger support to build code
	- got rid of annoying mwftw() type warning

2.4.103 -> 2.4.104:
	- fixed popt/Makefile.in to use CPP from configure
	- use tmppath from rpmrc to for ftp'd files (rather then /var/tmp)
	- autoconf files and .depend files weren't created properly during
	  make archive

2.4.102 -> 2.4.103:
	- need to create popt/configure during make archive
	- added comments about modifictation to base popt and rpmrc files
	- allow spaces in group names
	- fix bug in memory allocation of special doc stuff
	- Jeff Johnson's mode/dev fixes
	- clean up buildroot
	- be more paranoid about making temp files
	- added patches from Tim Mooney which let RPM build with non-gcc
	  compilers and non-GNU versions of make

2.4.101 -> 2.4.102:
	- fixed spelling of "instchangelog" in lib-rpmrc.in
	- fixed memory leak in headerSprintf() extension cache
	- fixed memory allocation for header formatting extension cache
	- added support for INSTPREFIX virtual tag for backwards compatibility
	- cpio error codes were poorly defined, causing bad error messages
	- generates INSTPREFIXES tag properly, and sets RPM_INSTALL_PREFIX
	  and RPM_INSTALL_PREFIXn environment variables
	- fixed memory leak in install code which occured when net shared paths
	  were used
	- don't pass net shared path to rpmInstallPackage() -- it looks 
	  directly in the rpmrc entries
	- don't remove files in netsharedpath, even for files whose states
	  are not net shared
	- changed --setugids to use separate chown and chgrp programs, for
	  better portability
	- popt moved to autoconf
	- Makefiles changed to allow building in a different directory then
	  the source code resides in
	- finally fixed the Build Host spacing in rpmpopt

2.4.100 -> 2.4.101:
	- handle files with spaces (put double quotes around them)